--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
